--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,9 +4,9 @@
     <string name="app_name">Aquarium</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
-    <string name="title_activity_select_device">SelectDeviceActivity</string>
-    <string name="title_activity_console">ConsoleActivity</string>
-    <string name="title_activity_direct_mode">DirectModeActivity</string>
-    <string name="title_activity_setting">SettingActivity</string>
+    <string name="title_activity_select_device">Aquarium</string>
+    <string name="title_activity_console">Aquarium</string>
+    <string name="title_activity_direct_mode">Aquarium</string>
+    <string name="title_activity_setting">Aquarium</string>
 
 </resources>
